tests/NormalTests/paczka2/big_fuzzy/34568985.err
Error in line 24: fjFVJ393ZB6 A840 70,5
Error in line 39: fjFVJ393ZB6 S10 18,12
Error in line 55: eEgubyz S10 5,5
Error in line 56: eEgubyz A840 54,0
Error in line 70: b4ey S10 13,8
Error in line 72: QBj2bI A840 70,1
Error in line 93: b4ey S10 3,8
Error in line 104: ym3OEn7eq S999 76,9
Error in line 80: eEgubyz S580 27,8
Error in line 105: ym3OEn7eq A840 5,8
Error in line 111: S999 S999 43,1
Error in line 118: QBj2bI S10 19,7
Error in line 123: b4ey S10 77,9
Error in line 129: QBj2bI S10 38,6
Error in line 124: fjFVJ393ZB6 S10 125,0
Error in line 128: mxkvznyFjh S580 25,6
Error in line 138: b4ey S580 15,0
Error in line 147: QBj2bI S10 47,3
Error in line 116: eEgubyz S999 33,2
Error in line 159: ym3OEn7eq S10 14,80
Error in line 155: ym3OEn7eq S580 95,5
Error in line 169: eEgubyz S580 97,6
Error in line 162: fjFVJ393ZB6 S10 0,2
Error in line 170: eEgubyz A840 83,6
Error in line 168: ym3OEn7eq S999 149,4
Error in line 165: mxkvznyFjh A840 91,9
Error in line 185: mxkvznyFjh S10 -2,5
Error in line 181: mxkvznyFjh S10 51,3
Error in line 183: QBj2bI A840 61,8
Error in line 211: S999 S580 63,4
Error in line 217: ym3OEn7eq S999 59,36
Error in line 230: eEgubyz A840 78,4
Error in line 238: eEgubyz S580 f8,0
Error in line 235: eEgubyz S580 98,3
Error in line 226: ym3OEn7eq S999 88,8
Error in line 234: fjFVJ393ZB6 S999 9,9
Error in line 239: mxkvznyFjh S10 37,8
Error in line 248: mxkvznyFjh S999 61,7
